--- a/shop.html
+++ b/shop.html
@@ -39,62 +39,82 @@
 
             <div class="items_list">
                 <div class="items_list">
-                    <a class="item" href="#">
-                        <div class="item_pic" > <img src="./images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">這款黃金典雅禮盒內含精選巧克力，包裝豪華，適合送禮自用皆宜，展現品味與高貴。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item2.jpg" alt=""></div>
-                        <div class="item_name">手工奢華巧克力禮盒12入</div>
-                        <div class="item_price">NT 2,600</div>
-                        <div class="item_text">每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item3.jpg" alt=""></div>
-                        <div class="item_name">璀璨星河禮盒12入</div>
-                        <div class="item_price">NT 2,800</div>
-                        <div class="item_text">璀璨星河禮盒帶來星光般的美麗，內含精緻巧克力，每一口都充滿浪漫與驚喜。</div>
-                    </a>
-                    <a class="item" href="#"> 
-                        <img class="new_tag" src="./images/shop_images/item_new.svg"></img>
-                        <div class="item_pic"> <img src="./images/shop_images/item4.jpg" alt=""></div>
-                        <div class="item_name">璀璨七夕-情人節禮盒</div>
-                        <div class="item_price">NT 3,000</div>
-                        <div class="item_text">專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <img class="new_tag" src="./images/shop_images/item_new.svg"></img>
-                        <div class="item_pic"> <img src="./images/shop_images/item5-1.jpg" alt=""></div>
-                        <div class="item_name">熱戀之吻-情人節禮盒</div>
-                        <div class="item_price">NT 3,000</div>
-                        <div class="item_text">熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item6.jpg" alt=""></div>
-                        <div class="item_name">90%黑金巧克力禮盒</div>
-                        <div class="item_price">NT 2,500</div>
-                        <div class="item_text">90%高濃度黑巧克力，帶來深邃的苦甜風味，滿足對巧克力的高標準需求。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item7.jpg" alt=""></div>
-                        <div class="item_name">生日快樂-巧克力禮盒</div>
-                        <div class="item_price">NT 2,800</div>
-                        <div class="item_text">為生日精心準備的巧克力禮盒，充滿甜蜜和祝福，讓每一口都帶來快樂與驚喜。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item8.jpg" alt=""></div>
-                        <div class="item_name">摩卡經典禮盒12入</div>
-                        <div class="item_price">NT 3,000</div>
-                        <div class="item_text">摩卡風味巧克力禮盒，結合濃郁咖啡香與細膩巧克力，帶來獨特的品味體驗。</div>
-                    </a>
-                    <a class="item" href="#">
-                        <div class="item_pic"> <img src="./images/shop_images/item9.jpg" alt=""></div>
-                        <div class="item_name">麋鹿聖誕-巧克力禮盒</div>
-                        <div class="item_price">NT 3,000</div>
-                        <div class="item_text">聖誕節限定巧克力禮盒，精緻設計與美味巧克力，增添節日的歡樂與喜悅。</div>
-                    </a>
+
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item1.jpg" alt=""></div>
+                            <div class="item_name">黃金典雅禮盒12入</div>
+                            <div class="item_price">NT 2,000</div>
+                            <div class="item_text">這款黃金典雅禮盒內含精選巧克力，包裝豪華，適合送禮自用皆宜，展現品味與高貴。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item2.jpg" alt=""></div>
+                            <div class="item_name">手工奢華巧克力禮盒12入</div>
+                            <div class="item_price">NT 2,600</div>
+                            <div class="item_text">每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item3.jpg" alt=""></div>
+                            <div class="item_name">璀璨星河禮盒12入</div>
+                            <div class="item_price">NT 2,800</div>
+                            <div class="item_text">璀璨星河禮盒帶來星光般的美麗，內含精緻巧克力，每一口都充滿浪漫與驚喜。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <img class="new_tag" src="./images/shop_images/item_new.svg"></img>
+                            <div class="item_pic"> <img src="./images/shop_images/item4.jpg" alt=""></div>
+                            <div class="item_name">璀璨七夕-情人節禮盒</div>
+                            <div class="item_price">NT 3,000</div>
+                            <div class="item_text">專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <img class="new_tag" src="./images/shop_images/item_new.svg"></img>
+                            <div class="item_pic"> <img src="./images/shop_images/item5-1.jpg" alt=""></div>
+                            <div class="item_name">熱戀之吻-情人節禮盒</div>
+                            <div class="item_price">NT 3,000</div>
+                            <div class="item_text">熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item6.jpg" alt=""></div>
+                            <div class="item_name">90%黑金巧克力禮盒</div>
+                            <div class="item_price">NT 2,500</div>
+                            <div class="item_text">90%高濃度黑巧克力，帶來深邃的苦甜風味，滿足對巧克力的高標準需求。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item7.jpg" alt=""></div>
+                            <div class="item_name">生日快樂-巧克力禮盒</div>
+                            <div class="item_price">NT 2,800</div>
+                            <div class="item_text">為生日精心準備的巧克力禮盒，充滿甜蜜和祝福，讓每一口都帶來快樂與驚喜。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item8.jpg" alt=""></div>
+                            <div class="item_name">摩卡經典禮盒12入</div>
+                            <div class="item_price">NT 3,000</div>
+                            <div class="item_text">摩卡風味巧克力禮盒，結合濃郁咖啡香與細膩巧克力，帶來獨特的品味體驗。</div>
+                        </a>
+                    </div>
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item9.jpg" alt=""></div>
+                            <div class="item_name">麋鹿聖誕-巧克力禮盒</div>
+                            <div class="item_price">NT 3,000</div>
+                            <div class="item_text">聖誕節限定巧克力禮盒，精緻設計與美味巧克力，增添節日的歡樂與喜悅。</div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
 
@@ -115,7 +135,7 @@
     <footer>
         <div class="wrap">
             <a class="logo" href="#"><img src="./images/footer_logo.svg" alt=""></a>
-            <div class="bottom_nav">               
+            <div class="bottom_nav">
                 <ul class="menu">
                     <li><a href="./index.html" id="home">首頁</a></li>
                     <li><a href="#" id="news">最新消息</a></li>
