--- a/shop_page2.html
+++ b/shop_page2.html
@@ -40,20 +40,21 @@
             <div class="items_list">
                 <div class="items_list">
 
+                   
+                    <div class="item_wrap">
+                        <a class="item" href="#">
+                            <div class="item_pic"> <img src="./images/shop_images/item2.jpg" alt=""></div>
+                            <div class="item_name">2025新年賀禮巧克力禮盒12入</div>
+                            <div class="item_price">NT 2,600</div>
+                            <div class="item_text">每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。</div>
+                        </a>
+                    </div> 
                     <div class="item_wrap">
                         <a class="item" href="#">
                             <div class="item_pic"> <img src="./images/shop_images/item1.jpg" alt=""></div>
                             <div class="item_name">黃金典雅禮盒12入</div>
                             <div class="item_price">NT 2,000</div>
                             <div class="item_text">這款黃金典雅禮盒內含精選巧克力，包裝豪華，適合送禮自用皆宜，展現品味與高貴。</div>
-                        </a>
-                    </div>
-                    <div class="item_wrap">
-                        <a class="item" href="#">
-                            <div class="item_pic"> <img src="./images/shop_images/item2.jpg" alt=""></div>
-                            <div class="item_name">手工奢華巧克力禮盒12入</div>
-                            <div class="item_price">NT 2,600</div>
-                            <div class="item_text">每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。</div>
                         </a>
                     </div>
                     <div class="item_wrap">
@@ -121,11 +122,11 @@
 
             <div class="change_page">
                 <div id="pages_num">
-                    <a href="#">1</a>
-                    <a href="./shop_page2.html">2</a>
-                    <a href="./shop_page2.html">3</a>
+                    <a href="./shop.html">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
                 </div>
-                <div class="next_pages" id="next_pages">
+                <div class="next_pages">
                     <a href="#" class="next_page_text"><img src="./images/footer_btn_nextpage.svg" alt=""></a>
                 </div>
             </div>
