0817-Chocolate_custom_screen3

--- a/Customization.html
+++ b/Customization.html
@@ -177,7 +177,7 @@
                 <div class="left_menu3">
                     <p class="left_menu3_p">文字</p>
                     <div class="left_menu3_div_input">
-                        <input type="text" value="請輸入文字..." class="left_menu3_input">
+                        <input type="text" class="left_menu3_input" placeholder="請輸入文字...">
                     </div>
                     <p class="left_menu3_p2">文字口味(巧克力)</p>
                     <ul>
@@ -245,7 +245,7 @@
                 <div class="left_menu4">
                     <p class="left_menu4_p">裝飾</p>
                     <div class="left_menu4_div_input">
-                        <input type="text" value="請輸入關鍵字..." class="left_menu4_input">
+                        <input type="text" class="left_menu4_input" placeholder="請輸入關鍵字...">
                     </div>
                     <div class="left_menu4_search_p">
                         <p class="left_menu4_search_p_1">花</p>
@@ -273,9 +273,9 @@
                 <div class="left_menu5">
                     <p class="left_menu5_p">模板</p>
                     <div class="left_menu4_img">
-                        <a href="#"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 1.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 2.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 3.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a1"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 1.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a2"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 2.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a3"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 3.svg" alt=""></a>
                     </div>
                     <div id="left_menu_right5"><a href=""><img src="./images/Custom_block/left menu/Frame right.svg"
                                 alt="" class="left_menu_right1_img"></a></div>
@@ -288,6 +288,9 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1.svg" alt="" class="middle_img2">
                     <img src="./images/Custom_block/middle/downloadedImage 2.svg" alt="" class="middle_img3">
                     <img src="./images/Custom_block/middle/downloadedImage 3.svg" alt="" class="middle_img4">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-1.svg" alt="" class="middle_img5">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-2.svg" alt="" class="middle_img6">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-3.svg" alt="" class="middle_img7">
                 </div>
                 <div class="middle_box">
                     <div>
