--- a/shop.html
+++ b/shop.html
@@ -31,12 +31,45 @@
                             </ul>
                         </li>
                         <li><a href="#">數量</a>
+                            <ul>
+                                <li><a href="#">4入</a>
+                                </li>
+                                <li><a href="#">6入</a>
+                                </li>
+                                <li><a href="#">12入</a>
+                                </li>
+                                <li><a href="#">24入</a>
+                                </li>
+                            </ul>
                         </li>
                         <li><a href="#">價位</a>
+                            <ul>
+                                <li><a href="#">500元以下</a>
+                                </li>
+                                <li><a href="#">1000元以下</a>
+                                </li>
+                                <li><a href="#">2000元以下</a>
+                                </li>
+                                <li><a href="#">2000元以上</a>
+                                </li>
+                            </ul>
                         </li>
+                    </ul>
+                </div>
+                <div class="permutation">
+                    <div class="permutation_btn">
+                        <a href=""><img src="./images/shop_images/permutation.svg" alt=""></a>
+                        <ul>
+                            <li><a href="">熱門</a></li>
+                            <li><a href="">推薦</a></li>
+                            <li><a href="">價格由低到高</a></li>
+                            <li><a href="">價格由高到低</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
+            <!-- 商品區 -->
             <div class="items_list">
                 <div class="items_list">
 
@@ -118,7 +151,7 @@
                 </div>
             </div>
 
-
+            <!-- 換頁區 -->
             <div class="change_page">
                 <div id="pages_num">
                     <a href="#">1</a>
