--- a/shop.html
+++ b/shop.html
@@ -18,8 +18,8 @@
             <div id="filter" class="filter">
                 <div class="filter_list">
                     <ul class="drop-down-menu">
-                        <li><a href="#">限定</a>
-                            <ul>
+                        <li id="festivalBtn"><a>限定</a>
+                            <ul id="festivalList">
                                 <li><a href="#">情人節</a>
                                 </li>
                                 <li><a href="#">生日</a>
@@ -30,8 +30,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#">數量</a>
-                            <ul>
+                        <li id="countsBtn"><a >數量</a>
+                            <ul id="countsList">
                                 <li><a href="#">4入</a>
                                 </li>
                                 <li><a href="#">6入</a>
@@ -42,8 +42,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#">價位</a>
-                            <ul>
+                        <li id="priceBtn"><a >價位</a>
+                            <ul id="priceList">
                                 <li><a href="#">500元以下</a>
                                 </li>
                                 <li><a href="#">1000元以下</a>
@@ -57,9 +57,9 @@
                     </ul>
                 </div>
                 <div class="permutation">
-                    <div class="permutation_btn">
-                        <a href=""><img src="./images/shop_images/permutation.svg" alt=""></a>
-                        <ul>
+                    <div class="permutation_btn" id="permutationBtn">
+                        <a><img src="./images/shop_images/permutation.svg" alt=""></a>
+                        <ul id="permutationList">
                             <li><a href="">熱門</a></li>
                             <li><a href="">推薦</a></li>
                             <li><a href="">價格由低到高</a></li>
@@ -187,6 +187,7 @@
         </div>
         <div class="copyRight">© Mélange. All Rights Reserved.</div>
     </footer>
+    <script src="./js/shop.js"></script>
 </body>
 
 </html>
