0817-Chocolate_custom_screen4

--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -28,11 +28,17 @@
             <div id="left_sidebar_second_page">
                 <ul>
                     <li class="left_sidebar_img"><a href="#"><img
-                                src="./images/Custom_block/Customized cards/left menu/Frame 1.svg" alt=""></a></li>
+                                src="./images/Custom_block/Customized cards/left menu/Frame 1-1.svg" alt="">
+                            <p>樣式</p>
+                        </a></li>
                     <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
-                                src="./images/Custom_block/Customized cards/left menu/Frame 2.svg" alt=""></a></li>
+                                src="./images/Custom_block/Customized cards/left menu/Frame 2-1.svg" alt="">
+                            <p>顏色</p>
+                        </a></li>
                     <li class="left_sidebar_img"><a href="#"><img
-                                src="./images/Custom_block/Customized cards/left menu/Frame 3.svg" alt=""></a>
+                                src="./images/Custom_block/Customized cards/left menu/Frame 3-1.svg" alt="">
+                            <p>文字</p>
+                        </a>
                     </li>
                 </ul>
                 <div id="left_sidebar_four_page_div1">
@@ -84,7 +90,7 @@
                 <div id="left_sidebar_four_page_div3_div1">
                     <p id="left_sidebar_four_page_div3_div1_p1">文字</p>
                     <div id="left_sidebar_four_page_div3_div2">
-                        <input type="text" value="請輸入文字..." id="left_sidebar_four_page_div3_input">
+                        <input type="text" placeholder="請輸入文字..." id="left_sidebar_four_page_div3_input">
                     </div>
                     <div id="left_sidebar_four_page_div3_div1_p2">
                         <p>字體</p>
@@ -117,7 +123,8 @@
                 </div>
             </div>
             <div id="center_display_second_page">
-                <img id="center_display_second_page_card1" src="./images/Custom_block/Customized cards/downloadedImage 1.svg" alt="">
+                <img id="center_display_second_page_card1"
+                    src="./images/Custom_block/Customized cards/downloadedImage 1.svg" alt="">
                 <div class="center_display_second_page_box">
                     <img src="./images/Custom_block/Customized cards/downloadedImage 2.svg" alt="">
                 </div>
@@ -136,23 +143,36 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#" id="menu_below_bug"><img
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1-1.svg"
+                                alt="">
+                            <p>選取</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 2-1.svg" alt="">
+                            <p>縮放</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
                                 src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg"
                                 alt="">
                             <p>旋轉</p>
                         </a></li>
-                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a>
+                    <li class="menu_below_li" id="garbage_can"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 3-1.svg" alt="">
+                            <p>刪除</p>
+                        </a>
                     </li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg"
-                                alt=""></a></li>
+                    <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 4-1.svg" alt="">
+                            <p>翻轉</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 5-1.svg" alt="">
+                            <p>上一步</p>
+                        </a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6-1.svg"
+                                alt="">
+                            <p>重製</p>
+                        </a></li>
                 </ul>
             </div>
         </div>
