--- a/Customization.html
+++ b/Customization.html
@@ -29,25 +29,25 @@
         <div id="all">
             <div id="left_sidebar">
                 <ul id="left_sidebar_ul">
-                    <li><a href="#" id="left_sidebar_btn1" class="left_sidebar_btn1"><img
-                                src="./images/Custom_block/left sidebar/chocolate -1.svg" alt="">
-                            <!-- <p class="left_sidebar_p">口味</p> -->
+                    <li><a href="#" id="left_sidebar_btn1" class="left_sidebar_btn_sidebarAll"><img
+                                src="./images/Custom_block/left sidebar/chocolate -1-1.svg" alt="">
+                            <p class="left_sidebar_p">口味</p>
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn2"><img
-                                src="./images/Custom_block/left sidebar/chocolate -2.svg" alt="">
-                            <!-- <p class="left_sidebar_p">配料</p> -->
+                    <li><a href="#" id="left_sidebar_btn2" class="left_sidebar_btn_sidebarAll"><img
+                                src="./images/Custom_block/left sidebar/chocolate -1-2.svg" alt="">
+                            <p class="left_sidebar_p">配料</p>
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn3"><img
-                                src="./images/Custom_block/left sidebar/chocolate -3.svg" alt="">
-                            <!-- <p class="left_sidebar_p">文字</p> -->
+                    <li><a href="#" id="left_sidebar_btn3" class="left_sidebar_btn_sidebarAll"><img
+                                src="./images/Custom_block/left sidebar/chocolate -1-3.svg" alt="">
+                            <p class="left_sidebar_p">文字</p>
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn4"><img
-                                src="./images/Custom_block/left sidebar/chocolate -4.svg" alt="">
-                            <!-- <p class="left_sidebar_p">裝飾</p> -->
+                    <li><a href="#" id="left_sidebar_btn4" class="left_sidebar_btn_sidebarAll"><img
+                                src="./images/Custom_block/left sidebar/chocolate -1-4.svg" alt="">
+                            <p class="left_sidebar_p">裝飾</p>
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn5"><img
-                                src="./images/Custom_block/left sidebar/chocolate -5.svg" alt="">
-                            <!-- <p class="left_sidebar_p">模板</p> -->
+                    <li><a href="#" id="left_sidebar_btn5" class="left_sidebar_btn_sidebarAll"><img
+                                src="./images/Custom_block/left sidebar/chocolate -1-5.svg" alt="">
+                            <p class="left_sidebar_p">模板</p>
                         </a></li>
                 </ul>
                 <div class="left_menu">
@@ -257,7 +257,7 @@
                     </div>
                     <p class="left_menu4_in_hr_p">熱門</p>
                     <div class="left_menu4_img">
-                        <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 5.svg" alt=""></a>
+                        <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 5.svg" alt="" draggable="true"></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 6.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 7.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 8.svg" alt=""></a>
@@ -273,9 +273,12 @@
                 <div class="left_menu5">
                     <p class="left_menu5_p">模板</p>
                     <div class="left_menu4_img">
-                        <a href="#" id="left_menu4_img_a1"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 1.svg" alt=""></a>
-                        <a href="#" id="left_menu4_img_a2"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 2.svg" alt=""></a>
-                        <a href="#" id="left_menu4_img_a3"><img src="./images/Custom_block/left menu/fourth floor/Ellipse 3.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a1"><img
+                                src="./images/Custom_block/left menu/fourth floor/Ellipse 1.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a2"><img
+                                src="./images/Custom_block/left menu/fourth floor/Ellipse 2.svg" alt=""></a>
+                        <a href="#" id="left_menu4_img_a3"><img
+                                src="./images/Custom_block/left menu/fourth floor/Ellipse 3.svg" alt=""></a>
                     </div>
                     <div id="left_menu_right5"><a href=""><img src="./images/Custom_block/left menu/Frame right.svg"
                                 alt="" class="left_menu_right1_img"></a></div>
@@ -293,7 +296,7 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1-3.svg" alt="" class="middle_img7">
                 </div>
                 <div class="middle_box">
-                    <div>
+                    <div id="middle_box_box">
                         <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
                         <!-- <img src="./image/middle/downloadedImage-Photoroom 4.svg" alt="" class="middle_box_img1"> -->
                         <!-- <img src="./image/middle/downloadedImage 1.svg" alt="" class="middle_box_img2"> -->
@@ -320,34 +323,68 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#" id="menu_below_bug"><img
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1-1.svg"
+                                alt="">
+                            <p>選取</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 2-1.svg" alt="">
+                            <p>縮放</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
                                 src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg"
                                 alt="">
                             <p>旋轉</p>
                         </a></li>
-                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a>
+                    <li class="menu_below_li" id="garbage_can"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 3-1.svg" alt="">
+                            <p>刪除</p>
+                        </a>
                     </li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg"
-                                alt=""></a></li>
+                    <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 4-1.svg" alt="">
+                            <p>翻轉</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 5-1.svg" alt="">
+                            <p>上一步</p>
+                        </a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6-1.svg"
+                                alt="">
+                            <p>重製</p>
+                        </a></li>
                 </ul>
             </div>
         </div>
         <div id="Prompt_field">
             <div>
                 <ul>
-                    <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt field/Frame 1.svg" alt=""></li>
-                    <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt field/Frame 2.svg" alt=""></li>
-                    <li id="Prompt_field_img3"><img src="./images/Custom_block/Prompt field/Frame 3.svg" alt=""></li>
-                    <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt field/Frame 4.svg" alt=""></li>
-                    <li id="Prompt_field_img5"><img src="./images/Custom_block/Prompt field/Group 5.svg" alt=""></li>
+                    <li id="Prompt_field_img1" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 1.svg" alt="">
+                        <!-- <p>選擇巧克力</p> -->
+                    </li>
+                    <li id="Prompt_field_img2" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 2.svg" alt="">
+                        <!-- <p>選擇小巧克力</p>。 -->
+                    </li>
+                    <li id="Prompt_field_img3" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 3.svg" alt="">
+                        <!-- <p>選擇禮盒</p> -->
+                    </li>
+                    <li id="Prompt_field_img4" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 4.svg" alt="">
+                        <!-- <p>選擇卡片</p> -->
+                    </li>
+                    <li id="Prompt_field_img5">
+                        <a href="#">
+                            <!-- <p>下一步</p>
+                            </a>
+                        </li>
+                        <li id="Prompt_field_img6">
+                            <a href="#"> -->
+                            <img src="./images/Custom_block/Prompt field/Group 5.svg" alt="">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
