--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -28,11 +28,17 @@
             <div id="left_sidebar_second_page">
                 <ul>
                     <li class="left_sidebar_img"><a href="#"><img
-                                src="./images/Custom_block/small chocolate/left sidebar/Frame 1.svg" alt=""></a></li>
+                                src="./images/Custom_block/small chocolate/left sidebar/Frame 1-1.svg" alt="">
+                            <p>口味</p>
+                        </a></li>
                     <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
-                                src="./images/Custom_block/small chocolate/left sidebar/Frame 2.svg" alt=""></a></li>
+                                src="./images/Custom_block/small chocolate/left sidebar/Frame 2-2.svg" alt="">
+                            <p>內餡</p>
+                        </a></li>
                     <li class="left_sidebar_img"><a href="#"><img
-                                src="./images/Custom_block/small chocolate/left sidebar/Frame 3.svg" alt=""></a></li>
+                                src="./images/Custom_block/small chocolate/left sidebar/Frame 3-3.svg" alt="">
+                            <p>模板</p>
+                        </a></li>
                 </ul>
                 <div id="select_field1__second_page">
                     <p>口味</p>
@@ -129,7 +135,8 @@
                     <img src="./images/Custom_block/small chocolate/downloadedImage 1.svg" alt="">
                 </div>
                 <div class="center_display_second_page_box">
-                    <img id="center_display_second_page_box1" src="./images/Custom_block/small chocolate/downloadedImage 2.svg" alt="">
+                    <img id="center_display_second_page_box1"
+                        src="./images/Custom_block/small chocolate/downloadedImage 2.svg" alt="">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
@@ -146,23 +153,36 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#" id="menu_below_bug"><img
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1-1.svg"
+                                alt="">
+                            <p>選取</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 2-1.svg" alt="">
+                            <p>縮放</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
                                 src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg"
                                 alt="">
                             <p>旋轉</p>
                         </a></li>
-                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a>
+                    <li class="menu_below_li" id="garbage_can"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 3-1.svg" alt="">
+                            <p>刪除</p>
+                        </a>
                     </li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg"
-                                alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg"
-                                alt=""></a></li>
+                    <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 4-1.svg" alt="">
+                            <p>翻轉</p>
+                        </a></li>
+                    <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
+                                src="./images/Custom_block/menu below/Frame 5-1.svg" alt="">
+                            <p>上一步</p>
+                        </a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6-1.svg"
+                                alt="">
+                            <p>重製</p>
+                        </a></li>
                 </ul>
             </div>
         </div>
@@ -170,10 +190,14 @@
             <div>
                 <ul>
                     <li id="Prompt_field_img0"><img src="./images/Custom_block/Prompt field/Frame 30.svg " alt=""></li>
-                    <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt field/Frame 31.svg" alt=""></li>
-                    <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt field/Frame 32.svg" alt=""></li>
-                    <li id="Prompt_field_img3"><img src="./images/Custom_block/Prompt field/Frame 3.svg" alt=""></li>
-                    <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt field/Frame 4.svg" alt=""></li>
+                    <li id="Prompt_field_img1" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 31.svg" alt=""></li>
+                    <li id="Prompt_field_img2" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 32.svg" alt=""></li>
+                    <li id="Prompt_field_img3" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 3.svg" alt=""></li>
+                    <li id="Prompt_field_img4" class="Prompt_field"><img
+                            src="./images/Custom_block/Prompt field/Frame 4.svg" alt=""></li>
                     <li id="Prompt_field_img5"><img src="./images/Custom_block/Prompt field/Group 5.svg" alt=""></li>
                 </ul>
             </div>
