--- a/Customization.html
+++ b/Customization.html
@@ -257,7 +257,8 @@
                     </div>
                     <p class="left_menu4_in_hr_p">熱門</p>
                     <div class="left_menu4_img">
-                        <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 5.svg" alt="" draggable="true"></a>
+                        <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 5.svg" alt=""
+                                draggable="true" id="left_menu4_img1"></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 6.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 7.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 8.svg" alt=""></a>
@@ -286,7 +287,7 @@
                 <!-- <div id="left_menu_right"><a href=""><img src="./image/left menu/Frame right.svg" alt=""></a></div> -->
             </div>
             <div class="middle">
-                <div>
+                <div id="middle_div1">
                     <img src="./images/Custom_block/middle/downloadedImage-Photoroom 4.svg" alt="" class="middle_img1">
                     <img src="./images/Custom_block/middle/downloadedImage 1.svg" alt="" class="middle_img2">
                     <img src="./images/Custom_block/middle/downloadedImage 2.svg" alt="" class="middle_img3">
@@ -296,7 +297,7 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1-3.svg" alt="" class="middle_img7">
                 </div>
                 <div class="middle_box">
-                    <div id="middle_box_box">
+                    <div>
                         <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
                         <!-- <img src="./image/middle/downloadedImage-Photoroom 4.svg" alt="" class="middle_box_img1"> -->
                         <!-- <img src="./image/middle/downloadedImage 1.svg" alt="" class="middle_box_img2"> -->
