--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
             <div id="filter" class="filter">
                 <div class="filter_list">
                     <ul class="drop-down-menu">
-                        <li id="festivalBtn"><a>限定</a>
+                        <li id="festivalBtn"><img class="BtnPic" src="./images/shop_images/filter_btn1_down.svg" alt=""/>
                             <ul id="festivalList">
                                 <li><a href="#">情人節</a>
                                 </li>
@@ -30,7 +30,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="countsBtn"><a >數量</a>
+                        <li id="countsBtn"><img class="BtnPic" src="./images/shop_images/filter_btn2_down.svg" alt=""/>
                             <ul id="countsList">
                                 <li><a href="#">4入</a>
                                 </li>
@@ -42,7 +42,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="priceBtn"><a >價位</a>
+                        <li id="priceBtn"><img class="BtnPic" src="./images/shop_images/filter_btn3_down.svg" alt=""/>
                             <ul id="priceList">
                                 <li><a href="#">500元以下</a>
                                 </li>
