--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
 
             </div>
         </section>
-        <img src="./index_images/bottom-bg.svg" alt="">
+        <img class="bg_bottom" src="./index_images/bottom-bg.svg" alt="">
 
 
 </main>
