0820-Chocolate_custom_screen2

--- a/Customization.html
+++ b/Customization.html
@@ -108,19 +108,19 @@
                         <p class="left_menu2_div1_p">堅果</p>
                         <ul>
                             <li>
-                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 1.svg" alt="">
+                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 1.svg" alt=""
+                                    id="pistachio_img"> </img>
                                 <p>開心果</p>
                             </li>
                             <li>
-                                </img>
-                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 2.svg" alt="">
+                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 2.svg" alt=""
+                                    id="almond_img_img"></img>
                                 <p>杏仁</p>
                             </li>
                             <li>
-                                </img>
-                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 3.svg" alt="">
+                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 3.svg" alt=""
+                                    id="dried_strawberries_img"> </img>
                                 <p>南瓜籽</p>
-                                </img>
                             </li>
                         </ul>
                         <div id="left_menu2_hr">
@@ -130,19 +130,19 @@
                             <p class="left_menu2_div1_p">果乾</p>
                             <ul>
                                 <li>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 4.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 4.svg" alt=""
+                                        id="dried_orange_img"> </img>
                                     <p>草莓乾</p>
                                 </li>
                                 <li>
-                                    </img>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 5.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 5.svg" alt=""
+                                        id="dried_kiwi_fruit_img"> </img>
                                     <p>柳橙乾</p>
                                 </li>
                                 <li>
-                                    </img>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 6.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 6.svg" alt=""
+                                        id="dry_petals_img"> </img>
                                     <p>奇異果乾</p>
-                                    </img>
                                 </li>
                             </ul>
                         </div>
@@ -153,19 +153,19 @@
                             <p class="left_menu2_div1_p">乾燥花瓣</p>
                             <ul>
                                 <li>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 7.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 7.svg" alt=""
+                                        id="roses_img"></img>
                                     <p>玫瑰花</p>
                                 </li>
                                 <li>
-                                    </img>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 8.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 8.svg" alt=""
+                                        id="chrysanthemum_img"> </img>
                                     <p>菊花</p>
                                 </li>
                                 <li>
-                                    </img>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 9.svg" alt="">
+                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 9.svg" alt=""
+                                        id="lavender_img"> </img>
                                     <p>薰衣草</p>
-                                    </img>
                                 </li>
                             </ul>
                         </div>
@@ -306,8 +306,6 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1-3.svg" alt="" class="middle_img7">
                     <div id="middle_div1_box">
                         <div id="middle_div1_box_div1" class="middle_div1_box_div1">
-                            <!-- <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg" alt="">
-                            <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg" alt=""> -->
                         </div>
                         <div id="middle_div1_box_div2" class="middle_div1_box_div2"></div>
                         <div id="middle_div1_box_div3"></div>
@@ -413,6 +411,7 @@
     </main>
     <!-- <script src="./js/jq.js"></script> -->
     <script src="./js/Customization.js"></script>
+    <script src="./js/Drag_function.js"></script>
 </body>
 
 </html>
