--- a/Q&A.html
+++ b/Q&A.html
@@ -29,7 +29,7 @@
                                 <div className="question" >
                                     <a ><div className="ballwrap"><div className="pinkball"></div></div>{props.question}<div class="down_vector"></div></a>
                                 </div>
-                                <div className="ans"><>{props.ans}</></div>
+                                <div className="ans"><p>{props.ans}</p></div>
                             </div>
 
 
