--- a/Q&A.html
+++ b/Q&A.html
@@ -27,7 +27,13 @@
 
                             <div className="per_qna_block">
                                 <div className="question" >
-                                    <a ><div className="ballwrap"><div className="pinkball"></div></div>{props.question}<div class="down_vector"></div></a>
+                                    <a>
+                                        <div className="q_part">
+                                            <div className="ballwrap"><div className="pinkball"></div></div>
+                                            <p>{props.question}</p>
+                                        </div>
+                                        <div class="vector"></div>
+                                    </a>
                                 </div>
                                 <div className="ans"><p>{props.ans}</p></div>
                             </div>
@@ -65,7 +71,7 @@
                         ]
 
                         React.useEffect(() => {
-                            toggleDropdown('question', 'ans');
+                            toggleDropdown('question', 'ans','vector');
                         }, []); // 确保 toggleDropdown 在组件渲染后调用
 
 
